Add firmware update, improve error handling, refactor codecs

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -79,3 +79,7 @@
     </tr>
   </tbody>
 </table>
+
+<a href="" class="btn btn-default pull-right"
+   ng-click="forget(account)"
+   ><span class="text-muted">Forget account</span></a>
