--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -3,8 +3,8 @@
   <li class="active">Seed recovery</li>
 </ol>
 
-<div ng-if="!device.is('connected')" class="alert alert-danger">
-  <h4>Sorry!</h4> Please connect your device to access this section.
+<div ng-if="!device.is('connected')" class="alert alert-warning">
+  <strong>Please connect your device</strong> to access this section.
 </div>
 
 <div class="row">
