--- a/app/views/modal.button.html
+++ b/app/views/modal.button.html
@@ -1,26 +1,25 @@
 <div class="modal">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog modal-md">
     <div class="modal-content">
-      <div class="modal-body"
+      <div class="modal-body text-center"
            ng-switch="code">
 
-        <div ng-switch-when="ButtonRequest_FeeOverThreshold">
-          <h3>Fee is over threshold.</h3> Please confirm the action on your device.
+        <div ng-switch-when="ButtonRequest_FeeOverThreshold" class="alert alert-block alert-info">
+          <h4>Fee is over threshold.</h4>
+          Please confirm the action on your device.
         </div>
-        <div ng-switch-when="ButtonRequest_ConfirmOutput">
-          <h3>Please confirm the transaction output on your device.</h3>
+        <div ng-switch-when="ButtonRequest_ConfirmOutput" class="alert alert-block alert-info">
+          <h4>Please confirm the transaction output on your device.</h4>
         </div>
-        <div ng-switch-when="ButtonRequest_ConfirmWord">
-          <h3>Please write down the seed word from the display of your device.</h3>
+        <div ng-switch-when="ButtonRequest_ConfirmWord" class="alert alert-block alert-info">
+          <h4>Please write down the seed from your device.</h4>
         </div>
-        <div ng-switch-when="ButtonRequest_ResetDevice">
-          <h3>Please confirm the reset action on your device.</h3>
+        <div ng-switch-when="ButtonRequest_WipeDevice" class="alert alert-block alert-warning">
+          <h4>All data on your device will be deleted.</h4>
+          This action cannot be undone. Please confirm on your device.
         </div>
-        <div ng-switch-when="ButtonRequest_WipeDevice">
-          <h3>All data on your device will be deleted.</h3> This action cannot be undone. Please confirm on your device.
-        </div>
-        <div ng-switch-default>
-          <h3>Please confirm the action on your device.</h3>
+        <div ng-switch-default class="alert alert-block alert-info">
+          <h4>Please confirm the action on your device.</h4>
         </div>
 
       </div>
