--- a/app/views/send.html
+++ b/app/views/send.html
@@ -29,6 +29,11 @@
       <input id="address" class="form-control" type="text"
              ng-change="estimate(transaction)"
              ng-model="transaction.address"
+             ng-options="
+               address.address as address.label
+               group by address.source
+               for address in suggestAddresses()"
+             bs-typeahead
              required>
     </div>
   </div>
@@ -44,7 +49,3 @@
   </div>
 
 </form>
-
-<pre>
-  {{ builtTx | json }}
-</pre>
