Limit accounts to 10, fix id sequencing

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -40,6 +40,7 @@
        ng-class="{ active: isActive('/device/{{device.id}}/account-add') }"
        ng-click="device.addAccount()"
        ng-show="device.hasKey()"
+       ng-disabled="!device.moreAccountsAllowed()"
       ><span class="glyphicon glyphicon-plus"></span> Add account</a>
   </li>
 </ul>
