Fix href in Add Account

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -36,7 +36,7 @@
       </li>
     </ul>
 
-    <a ng-href="#/device/{{device.id}}/account-add" class="btn btn-sm"
+    <a ng-href="" class="btn btn-sm"
        ng-class="{ active: isActive('/device/{{device.id}}/account-add') }"
        ng-click="device.addAccount()"
        ng-show="device.hasKey()"
