Finalize feedback support, add URL of test feedback form
- TODO: configurable form url
- TODO: send by ajax

--- a/app/views/modal.feedback.html
+++ b/app/views/modal.feedback.html
@@ -1,20 +1,26 @@
 <div class="feedbackmodal modal">
   <div class="modal-dialog">
     <div class="modal-content">
-      <form action="post">
+      <form action="https://docs.google.com/forms/d/1PooxIMBMd_Fnn7va-d9nq2UX7DMolTHT-Sg3xXruzOE/formResponse"
+            method="POST">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Webwallet Feedback</h4>
+          <h4 class="modal-title">Feedback</h4>
         </div>
 
         <div class="modal-body">
           <div class="form-group">
-            <label class="control-label" for="feedback">Your idea, experience, or a problem:</label>
+            <label class="control-label" for="feedback">
+              Your idea, experience, or a problem.
+              <small class="text-muted">No private or sensitive information, please.</small></label>
+            </label>
             <textarea class="form-control" name="entry.1434484052" id="feedback" required></textarea>
           </div>
+
           <div class="form-group">
             <label class="control-label" for="email">
-              If you want, leave your email. We will get back to you, promise!</label>
+              If you want, leave your email.
+              <small class="text-muted">We will get back to you, promise!</small></label>
             <input type="email" class="form-control" name="entry.1413017719" id="email">
           </div>
 
