--- a/app/views/modal.feedback.html
+++ b/app/views/modal.feedback.html
@@ -12,9 +12,10 @@
           <div class="form-group">
             <label class="control-label" for="feedback">
               Your idea, experience, or a problem.
-              <small class="text-muted">No private or sensitive information, please.</small></label>
+              <small class="text-danger">No private or sensitive information, please.</small></label>
             </label>
-            <textarea class="form-control" name="entry.1434484052" id="feedback" required></textarea>
+            <textarea class="form-control" name="entry.1434484052" id="feedback" rows="4"
+                      required autofocus></textarea>
           </div>
 
           <div class="form-group">
@@ -27,7 +28,7 @@
           <p class="text-muted">
             <strong>Note:</strong>
             Your feedback is submitted and stored using Google Forms.
-            We don't transmit any information except your feedback, email, and the page URL.
+            We don't transmit any information except your feedback, email, and the page address.
           </p>
         </div>
 
