--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -206,6 +206,15 @@ body {
   opacity: 0.5;
 }
 
+/* Send */
+
+.txaddress-qrscan {
+  position: absolute;
+  font-size: 18px;
+  right: 22px;
+  top: 8px;
+}
+
 /* Device setup */
 
 .devsetup-strength {
