Forbid removing the last account

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -81,5 +81,6 @@
 </table>
 
 <a href="" class="btn btn-default pull-right"
+   ng-show="device.accounts.length > 1"
    ng-click="forget(account)"
    ><span class="text-muted">Forget account</span></a>
