Style changes in buttons

--- a/app/views/device.html
+++ b/app/views/device.html
@@ -17,7 +17,7 @@
 </fieldset>
 
 <a href="" class="btn btn-default pull-right"
-   ng-click="forget(device)"><span class="text-muted">Forget device</span></a>
+   ng-click="forget(device)">Forget device</a>
 
 <fieldset ng-disabled="!device.is('connected')">
 
