--- a/app/views/account.html
+++ b/app/views/account.html
@@ -82,5 +82,4 @@
 
 <a href="" class="btn btn-default pull-right"
    ng-show="device.accounts.length > 1"
-   ng-click="forget(account)"
-   ><span class="text-muted">Forget account</span></a>
+   ng-click="forget(account)">Forget account</a>
