--- a/app/views/modal.feedback.html
+++ b/app/views/modal.feedback.html
@@ -33,8 +33,8 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-lg btn-primary">Submit</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
     </div>
