--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -10,7 +10,7 @@
 
         <form class="form-inline">
           <div class="form-group">
-            <input type="text" class="form-control input-lg" size="12" autofocus
+            <input type="password" class="form-control input-lg" size="12" autofocus
                    ng-model="passphrase">
           </div>
           <div class="form-group">
