Forget account renamed to hide, couple with "no txs" message

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -19,10 +19,13 @@
    ng-show="account.transactions == null">
   <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
 </p>
-<p class="text-center text-muted h4"
-   ng-show="account.transactions != null && !account.transactions.length">
-  No transactions to display
-</p>
+<div class="text-center text-muted"
+     ng-show="account.transactions != null && !account.transactions.length">
+  <h4>No transactions to display</h4>
+  <a href="" class="btn btn-default"
+     ng-show="device.accounts.length > 1"
+     ng-click="forget(account)">Hide this account</a>
+</div>
 <table class="txlist table table-hover"
        ng-show="account.transactions != null && account.transactions.length">
   <tbody>
@@ -79,7 +82,3 @@
     </tr>
   </tbody>
 </table>
-
-<a href="" class="btn btn-default pull-right"
-   ng-show="device.accounts.length > 1"
-   ng-click="forget(account)">Forget account</a>
