Remove "forget dev" button, add "log-out" icon to breadcrumbs

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,6 +40,10 @@
   padding: 15px 20px;
 }
 
+.breadcrumb li.pull-right:before {
+  display: none;
+}
+
 /* ngAnimate modals */
 .modal-backdrop.am-fade {
   opacity: .5;
