--- a/app/views/account.html
+++ b/app/views/account.html
@@ -1,6 +1,13 @@
 <ol class="breadcrumb">
   <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
   <li class="active">{{account.label()}}</li>
+
+  <li class="pull-right">
+    <a href="" class="text-muted"
+       title="Forget this device"
+       ng-click="forget(device)"
+      ><span class="glyphicon glyphicon-log-out"></span></a>
+  </li>
 </ol>
 
 <p class="nav-sendrecv btn-group btn-group-lg">
