--- a/app/views/receive.html
+++ b/app/views/receive.html
@@ -3,6 +3,13 @@
   <li><a ng-href="#/device/{{device.id}}/account/{{account.id}}"
     >{{account.label()}}</a></li>
   <li class="active">Receive</li>
+
+  <li class="pull-right">
+    <a href="" class="text-muted"
+       title="Forget this device"
+       ng-click="forget(device)"
+      ><span class="glyphicon glyphicon-log-out"></span></a>
+  </li>
 </ol>
 
 <div class="row">
