--- a/app/views/device.html
+++ b/app/views/device.html
@@ -4,7 +4,7 @@
   <li class="pull-right">
     <a href="" class="text-muted"
        title="Forget this device"
-       ng-click="forget(device)"
+       ng-click="forgetDevice()"
       ><span class="glyphicon glyphicon-log-out"></span></a>
   </li>
 </ol>
