--- a/app/views/receive.html
+++ b/app/views/receive.html
@@ -79,7 +79,7 @@
       <ul class="list-unstyled">
         <li ng-if="activeAddress.path">
           <span class="h6">BIP32 Path:</span>
-          <small class="text-monospace">m/{{ activeAddress.path.join('/') }}</small>
+          <small class="text-monospace">{{ activeAddress.path | bip32Path }}</small>
         </li>
         <li ng-if="activeAddress.balance">
           <span class="h6">Balance:</span>
