Add account and Hide account jump on the last

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -42,7 +42,7 @@
 
     <a ng-href="" class="btn btn-sm"
        ng-class="{ active: isActive('/device/{{device.id}}/account-add') }"
-       ng-click="device.addAccount()"
+       ng-click="addAccount(device)"
        ng-show="device.hasKey()"
        ng-disabled="!device.addAccountAllowed()"
       ><span class="glyphicon glyphicon-plus"></span> Add account</a>
