Update the account derivation scheme
- account adding is async now and requires connected device
- use BIP32 scheme: m/cointype/reserved'/account'/change/address
- use hardened derivation through `getPublicKey` device call to acquire the
  account node
- continue to use the public derivation trough the plugin method to derive the
  externa/change and address nodes

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -32,8 +32,7 @@
                 ({{account.balance | amount}} {{account.coin.coin_shortcut}})
               </span>
               <span ng-if="account.balance == null">
-                (<span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-                {{account.coin.coin_shortcut}})
+                <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
               </span>
             </small>
           </a>
@@ -43,8 +42,7 @@
     <a ng-href="" class="btn btn-sm"
        ng-class="{ active: isActive('/device/{{device.id}}/account-add') }"
        ng-click="addAccount(device)"
-       ng-show="device.hasKey()"
-       ng-disabled="!device.addAccountAllowed()"
+       ng-show="device.addAccountAllowed()"
       ><span class="glyphicon glyphicon-plus"></span> Add account</a>
   </li>
 </ul>
