On disconnected device, show disabled Add Account btn with tooltip

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -162,6 +162,10 @@ body {
   white-space: nowrap;
 }
 
+.nav-devices-accounts {
+  margin-bottom: 10px;
+}
+
 /* Transaction list */
 
 .txlist-tx {
