--- a/app/views/send.html
+++ b/app/views/send.html
@@ -28,7 +28,7 @@
         <input id="fee" class="form-control" type="text"
                ng-model="transaction.fee"
                tabindex="-1"
-               data-title="Fee is calculated automatically from the size of your transaction"
+               data-title="Fee is calculated automatically from the size of your transaction."
                data-container="body"
                data-trigger="hover"
                bs-tooltip
