Fix fee tooltip, remove (c) from footer

--- a/app/views/send.html
+++ b/app/views/send.html
@@ -48,6 +48,7 @@
                ng-model="transaction.fee"
                tabindex="-1"
                data-title="Fee is calculated automatically from the size of your transaction."
+               data-placement="bottom"
                data-container="body"
                data-trigger="hover"
                bs-tooltip
