--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -53,7 +53,7 @@
             </span>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control h4 input-lg text-center pinmodal-pin"
+            <input type="password" class="form-control h4 input-lg text-center pinmodal-pin" autocomplete="off"
                    ng-model="pin">
           </div>
         </form>
