--- a/app/views/send.html
+++ b/app/views/send.html
@@ -47,7 +47,7 @@
         <input id="fee" class="form-control" type="text"
                ng-model="transaction.fee"
                tabindex="-1"
-               data-title="Fee is calculated automatically from the size of your transaction."
+               data-title="The transaction fee is calculated automatically."
                data-placement="bottom"
                data-container="body"
                data-trigger="hover"
