--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -1,14 +1,17 @@
 <div class="pinmodal modal">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" title="Cancel"
-                ng-click="$hide(); callback()">&times;</button>
-        <h4 class="modal-title">{{message || 'Please enter your PIN'}}</h4>
-      </div>
-      <div class="modal-body">
 
-        <form class="form-horizontal">
+      <form class="form-horizontal"
+            ng-submit="$hide(); callback(pin)">
+
+        <div class="modal-header">
+          <button type="button" class="close" title="Cancel"
+                  ng-click="$hide(); callback()">&times;</button>
+          <h4 class="modal-title">{{message || 'Please enter your PIN'}}</h4>
+        </div>
+        <div class="modal-body">
+
           <div class="form-group">
             <span class="col-sm-4">
               <button class="btn btn-block btn-lg"
@@ -56,12 +59,14 @@
             <input type="password" class="form-control h4 input-lg text-center pinmodal-pin" autocomplete="off"
                    ng-model="pin">
           </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary btn-block btn-lg"
-                ng-click="$hide(); callback(pin)">Enter</button>
-      </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary btn-block btn-lg">Enter</button>
+        </div>
+
+      </form>
+
     </div>
   </div>
 </div>
