--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -7,15 +7,14 @@
         <h4 class="modal-title">{{message || 'Please enter your passphrase'}}</h4>
       </div>
       <div class="modal-body">
-
-        <form class="form-inline">
+        <form class="form-inline"
+              ng-submit="$hide(); callback(passphrase)">
           <div class="form-group">
             <input type="password" class="form-control input-lg" size="12" autofocus autocomplete="off"
                    ng-model="passphrase">
           </div>
           <div class="form-group">
-            <button class="btn btn-primary btn-lg"
-                    ng-click="$hide(); callback(passphrase)">Enter</button>
+            <button type="submit" class="btn btn-primary btn-lg">Enter</button>
           </div>
         </form>
       </div>
